2009-03-11  Elliott Baron  <ebaron@redhat.com>

	* src/org/eclipse/linuxtools/valgrind/launch/messages.properties: 
	* src/org/eclipse/linuxtools/valgrind/launch/ValgrindLaunchConfigurationDelegate.java:
	(launch): Use new findValgrindLocation method.
	(getPlugin): New method for subclassing.
	* ValgrindLaunchPlugin.java (findValgrindVersion): New method.
	(getValgrindCommand): New method for subclassing.
	(findValgrindLocation): New method.
	* ValgrindOptionsTab.java (handleToolChanged): Call recomputeSize.
	(createBasicOptions): New UI.
	(recomputeSize): New method.
	(createErrorOptions): New UI.
	(createControl): Find Valgrind version upon creation; use ScrolledComposite; redesigned UI.
	(isValid): Check version obtained correctly.
	(getDynamicTab): Call getPlugin() for subclassing.
	(createSuppressionsOption): New UI.

2009-02-27  Elliott Baron  <ebaron@redhat.com>

	* IValgrindOutputDirectoryProvider.java: Clarified comment.
	* ValgrindLaunchConfigurationDelegate.java: Ensure files to delete when cleaning
	output directory are not directories themselves.

2009-02-25  Elliott Baron  <ebaron@redhat.com>

	* IValgrindLaunchDelegate.java: Renamed launch to handleLaunch.
	* ValgrindLaunchConfigurationDelegate.java (handleValgrindError): Extracted.
	(getDynamicDelegate): Extracted.
	(launch): Various changes to facilitate subclassing.
	(getValgrindCommand): Extracted.

2009-02-20  Elliott Baron  <ebaron@redhat.com>

	* IValgrindOutputDirectoryProvider.java (getOutputPath): No longer responsible for
	creating/emptying directory. Simply return path.
	* ValgrindLaunchConfigurationDelegate.java (createDirectory): Receive role of above. 
	(setOutputPath): Stores output directory in LaunchConfiguration.
	(launch): Changes from above.
	* ValgrindOptionsTab.java: No longer sets output directory. Moved to delegate for
	compatibility with old Launch Configurations.
	* ValgrindOutputDirectoryProvider.java (getOutputPath): Changes from interface. 
