@@ -24,3 +24,5 @@ Import-Package: org.eclipse.cdt.core.dom.ast,
  org.eclipse.linuxtools.valgrind.core,
  org.eclipse.linuxtools.valgrind.launch,
  org.eclipse.linuxtools.valgrind.ui
+Export-Package: org.eclipse.linuxtools.valgrind.cachegrind,
+ org.eclipse.linuxtools.valgrind.cachegrind.model
