@@ -10,25 +10,25 @@ ValgrindLaunchPlugin.Cannot_retrieve_page=Cannot retrieve page from extension
 ValgrindLaunchPlugin.Please_ensure_Valgrind=Please ensure Valgrind is installed and in your path.
 ValgrindLaunchPlugin.Couldn't_determine_version=Couldn't determine version of Valgrind located at {0}.
 ValgrindOptionsTab.Basic_Options=Basic Options
-ValgrindOptionsTab.child_silent=child silent after fork:
-ValgrindOptionsTab.demangle=demangle C++ names:
+ValgrindOptionsTab.child_silent=child silent after fork
+ValgrindOptionsTab.demangle=demangle C++ names
 ValgrindOptionsTab.Error_Options=Error Options
 ValgrindOptionsTab.File_System=File Syste&m...
 ValgrindOptionsTab.General=General Options
-ValgrindOptionsTab.limit_errors=limit errors reported:
+ValgrindOptionsTab.limit_errors=limit errors reported
 ValgrindOptionsTab.max_size_of_stack_frame=max size of stack frame:
 ValgrindOptionsTab.No_options_tab_found=No options tab found for tool 
 ValgrindOptionsTab.num_callers=num callers in stack trace:
-ValgrindOptionsTab.run_freeres=run __libc_freeres() on exit:
+ValgrindOptionsTab.run_freeres=run __libc_freeres() on exit
 ValgrindOptionsTab.Select_a_Resource=Select a Resource:
 ValgrindOptionsTab.Select_a_Suppressions_File=Select a Suppressions File:
 ValgrindOptionsTab.Suppressions=Suppressions
-ValgrindOptionsTab.show_errors_below_main=show errors below main:
+ValgrindOptionsTab.show_errors_below_main=show errors below main
 ValgrindOptionsTab.suppressions_file=suppressions file:
 ValgrindOptionsTab.suppressions_file_doesnt_exist=suppressions file: {0}  doesn't exist.
 ValgrindOptionsTab.Tool=Tool
 ValgrindOptionsTab.Tool_to_run=Tool to run: 
-ValgrindOptionsTab.trace_children=trace children on exec:
+ValgrindOptionsTab.trace_children=trace children on exec
 ValgrindOptionsTab.Valgrind_Options=Valgrind Options
 ValgrindOptionsTab.Workspace=&Workspace...
 ValgrindOutputDirectory.Couldnt_create=Couldn't create {0}
