@@ -12,7 +12,7 @@ package org.eclipse.linuxtools.valgrind.massif;
 
 import org.eclipse.debug.core.ILaunchConfiguration;
 import org.eclipse.debug.core.model.ISourceLocator;
-import org.eclipse.linuxtools.valgrind.launch.ValgrindLaunchPlugin;
+import org.eclipse.linuxtools.valgrind.core.PluginConstants;
 import org.eclipse.swt.graphics.FontMetrics;
 import org.eclipse.swt.graphics.GC;
 import org.eclipse.swt.widgets.Control;
@@ -34,7 +34,7 @@ public class MassifPlugin extends AbstractUIPlugin {
 	// and not full paths
 	protected ISourceLocator locator;
 
-	public static final String TOOL_ID = ValgrindLaunchPlugin.PLUGIN_ID + ".massif"; //$NON-NLS-1$
+	public static final String TOOL_ID = PluginConstants.LAUNCH_PLUGIN_ID + ".massif"; //$NON-NLS-1$
 	
 	/**
 	 * The constructor
