@@ -22,8 +22,8 @@ MassifToolPage.milliseconds=milliseconds
 MassifToolPage.minimum_heap_block=minimum heap block alignment:
 MassifToolPage.New=N&ew
 MassifToolPage.New_Allocation_Function=New Allocation Function
-MassifToolPage.profile_heap=profile heap:
-MassifToolPage.profile_stack=profile stack:
+MassifToolPage.profile_heap=profile heap
+MassifToolPage.profile_stack=profile stack
 MassifToolPage.Remove=Rem&ove
 MassifToolPage.time_unit=time unit:
 MassifViewPart.Display_Heap_Allocation=Display Heap Allocation Graph
