@@ -10,7 +10,7 @@
  *******************************************************************************/ 
 package org.eclipse.linuxtools.valgrind.memcheck;
 
-import org.eclipse.linuxtools.valgrind.launch.ValgrindLaunchPlugin;
+import org.eclipse.linuxtools.valgrind.core.PluginConstants;
 import org.eclipse.ui.plugin.AbstractUIPlugin;
 import org.osgi.framework.BundleContext;
 
@@ -22,7 +22,8 @@ public class MemcheckPlugin extends AbstractUIPlugin {
 
 	// The shared instance
 	private static MemcheckPlugin plugin;
-	public static final String TOOL_ID = ValgrindLaunchPlugin.PLUGIN_ID + ".memcheck"; //$NON-NLS-1$
+	
+	public static final String TOOL_ID = PluginConstants.LAUNCH_PLUGIN_ID + ".memcheck"; //$NON-NLS-1$
 	
 	/**
 	 * The constructor
