@@ -1,3 +1,9 @@
+2009-03-12  Elliott Baron  <ebaron@redhat.com>
+
+	* MassifPlugin.java: Use PluginConstants for referencing LaunchPlugin. 
+	* MassifToolPage.java (createControl): Remove labels for checkboxes.
+	* messages.properties: Remove colons from text for above.
+
 2009-03-11  Elliott Baron  <ebaron@redhat.com>
 
 	* MassifToolPage.java: Extracted constants for time unit names.
