@@ -1,3 +1,7 @@
+2009-03-12  Elliott Baron  <ebaron@redhat.com>
+
+	* MemcheckPlugin.java: Use PluginConstants for referencing LaunchPlugin. 
+
 2009-02-25  Elliott Baron  <ebaron@redhat.com>
 
 	* MemcheckLaunchDelegate.java (handleLaunch): Renamed.
